# gwsamplefind

./: .gitignore  README.rst  __init__.py  gwsamplefind.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml  python-app.yml
src/: base.py  client.py  fsspec.py  local.py  pelican.py
