[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwsamplefind"
version = "0.2.0"
description = "Access gravitational-wave sample data"
readme = "README.rst"
dependencies = ["gwosc", "h5py", "pandas", "pelicanfs", "requests"]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
gwsamplefind = "gwsamplefind.__main__:main"

[tool.setuptools]
packages = ["gwsamplefind"]

[tool.setuptools.package-dir]
gwsamplefind = "src"